--- a/_posts/2019-12-28-the-us-narrative-today.html
+++ b/_posts/2019-12-28-the-us-narrative-today.html
@@ -1514,107 +1514,108 @@ stories:
   domain: http://www.harrodsburgherald.com/
   link: https://www.harrodsburgherald.com/2019/12/26/child-safe-after-being-taken-on-joyride-in-stolen-car/
 images:
-- name: soldier-kneeling-26307870940-76a7c658cd-k.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26307870940-76a7c658cd-k.jpg
-- name: razorwire-DSC-0080-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-purple-storm.jpg
-- name: rain-princess-christ-cross-chalice.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-christ-cross-chalice.jpg
-- name: locked-up-steam-lock-up-steam-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-deep-connections.jpg
-- name: blossombar-crafty-painting-file-00-00-50-08.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-08.jpg
-- name: death-valley-death-valley-national-park-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-graham-sutherland.jpg
-- name: bf-skinner-gears-pipes-plumbing.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-gears-pipes-plumbing.jpg
-- name: sand-hand-sand-hand-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-mucha-mult.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-purple-pond.jpg
-- name: border-fence-border-fence-on-hill-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-kandinsky-bv.jpg
-- name: old-barn-old-barn-1500-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-alberto-giacometti.jpg
-- name: oldroad-old-road-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-marcel-duchamp.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-copper-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-copper-circuit.png
-- name: old-school-house-old-schoolhouse-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-yellow-paper.jpg
-- name: oldcabin-store-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-blue-brush.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-sand-paper.jpg
-- name: oldhouse-granaryfield-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-cinnamon-rolls.jpg
-- name: hollywood-building-hollywood-building-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-bright-sand.jpg
-- name: oldcabin-oldcabin-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-yellow-paper.jpg
-- name: locked-up-steam-lock-up-steam-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-alien-goggles.jpg
-- name: death-valley-death-valley-national-park-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-aqua.jpg
-- name: crow_kandinsky_bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_kandinsky_bv.jpg
-- name: machine-road-machine-road-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-nazi-poster.jpg
-- name: stalin-time-hiding-monster-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-hiding-monster-statue.jpg
-- name: catacombs-catacombs-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-matrix.jpg
-- name: adam-smith-adam-smith-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-horiz-circuit.jpg
-- name: oldcabin-oldcabin-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-bright-sand.jpg
-- name: oldcabin-store-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-wols.jpg
-- name: old-school-house-old-schoolhouse-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-far-away.jpg
-- name: berlinwall-DSC-0084-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-clean-view.jpg
-- name: old-door-lock-old-door-lock-2-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-copper-circuit.jpg
-- name: oldhouse-granaryfield-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dark-rain.jpg
-- name: abe-lincoln-one-umberto-bocc-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-umberto-bocc-file-00-00-00-00.jpg
-- name: adam-smith-adam-smith-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-crafty-painting.jpg
-- name: liberty-back-statue-liberty-back-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-gan-vogh.jpg
-- name: trucksilo-trucksilo-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-ww2-color.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-diego-rivera1.jpg
-- name: aws-s3-stories-new-old-door-lock-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-old-door-lock-smoking-cigarette.jpg
-- name: christianity-christianity-under-construction-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-emily-carr.jpg
-- name: oldhouse-granaryfield-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-colored-circuits.jpg
-- name: nyc-flag-nycflag-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-diego-rivera1.jpg
-- name: stalin-time-dinosaur-stepping-on-lego.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-dinosaur-stepping-on-lego.jpg
-- name: store-on-corner-store-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-matrix.jpg
-- name: mosaic-face-mosaic-face-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crunch-paper.jpg
-- name: dc-statue-dcstatue-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-mucha-mult.jpg
-- name: aws-s3-stories-containership-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-copper-circuit.jpg
-- name: nyc-flag-nycflag-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colored-circuits.jpg
-- name: oldbarn-oldbarn-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-space-pizza.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-cinnamon-rolls.jpg
-- name: cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-crabapple.jpg
+- name: scream-DSC_0027.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0027.jpg
+- name: nazi-invasion-old-man-crossing-border.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-man-crossing-border.jpg
+- name: downtown-trucksilo-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-satan-red.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gred-mash.jpg
+- name: statue-of-liberty-front-view-statueofliberty-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-really-hot.jpg
+- name: oldcabin-store-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-aqua.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-copper-circuit-2.jpg
+- name: containership-containership-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-neo-instinct.jpg
+- name: oldhouse-oldhouse-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-clean-view.jpg
+- name: gypsy-wagon-gypsywagon-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-green-zuma.jpg
+- name: dragon-desert-desert-dragon-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-blue-circuit-5.jpg
+- name: braceros-domingo-ulloa-train-subway-125th-down-the-line.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-train-subway-125th-down-the-line.jpg
+- name: braceros-domingo-ulloa-san-francisco-salesforce-bay-bridge.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-san-francisco-salesforce-bay-bridge.jpg
+- name: flower-barbed-wire-flower-barbed-wire-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit-5.jpg
+- name: copper-circuit-girl-reading-bench-garden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-girl-reading-bench-garden.jpg
+- name: school-clouds-church-clouds-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-plentiful.jpg
+- name: border-fence-border-fence-on-hill-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dali-three.jpg
+- name: nazi-invasion-miami-beach-tower-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-miami-beach-tower-city.jpg
+- name: art-museum-art-museum-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dark-rain.jpg
+- name: store-on-corner-store-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-nazi-poster.jpg
+- name: crow-crow-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-far-away.jpg
+- name: statue-of-liberty-front-view-statueofliberty-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-gan-vogh.jpg
+- name: server-racks-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds.jpg
+- name: nazi-invasion-old-gas-station_36588462091_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-gas-station_36588462091_o.jpg
+- name: rain-princess-P9180036.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-P9180036.jpg
+- name: subway-subway-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-purple-storm.jpg
+- name: old-granary-field-oldhouse-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-alien-goggles.jpg
+- name: server-cloud-server-racks-door-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-green-zuma.jpg
+- name: yosemite-yosemite-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dark-soul.jpg
+- name: eduardo-eduardo-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dark-rain.jpg
+- name: copper-circuit-white-house-lawn-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-white-house-lawn-view.jpg
+- name: aws-s3-square-C2L6QJRUcAEVlYF.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2L6QJRUcAEVlYF.jpg
+- name: file-00-00-18-35 2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-18-35
+    2.jpg
+- name: crow_purple_storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_purple_storm.jpg
+- name: san-francisco-street-view-san-francisco-street-view-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-satan-red.jpg
+- name: death-valley-death-valley-national-park-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-smoking-cigarette.jpg
+- name: bf-skinner-underground-subway_36342747010_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-underground-subway_36342747010_o.jpg
+- name: rain-princess-border-watching-cars.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-watching-cars.jpg
+- name: gypsy-wagon-gypsywagon-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-ww2-color.jpg
+- name: bf-skinner-statue-of-liberty_36744433525_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-of-liberty_36744433525_o.jpg
+- name: paris-paris-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-kand-two.jpg
+- name: miamibeach-miamibeach-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-rainbow-festival.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-neo-instinct.jpg
+- name: berlinwall2-berlinwall-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-rainbow-festival.jpg
+- name: rockingchair-rockingchair-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-crabapple.jpg
+- name: blossombar-dark-rain-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-rain-file-00-00-00-00.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-free-woman.jpg
+- name: yuma-bank-yuma-bak-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-copper-circuit.jpg
+- name: trucksilo-trucksilo-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-aqua.jpg
+- name: old-school-house-old-schoolhouse-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-satan-red.jpg
+- name: store-on-corner-oldcabin-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-internet-numbers.jpg
 ---
 Blind Bowler From New York.&nbsp;Hanna Springs Students Write Letters To Santa.&nbsp;Creede Welcomes Crowds For Annual Hockey Tournament.&nbsp;Think Of The Stars.&nbsp;Three Things To Watch When Green Bay Packers Battle Detroit Lions.&nbsp;Fireworks Safety Advised When Ringing In The New Year.&nbsp;Some Of 2019's Most Memorable Games Decided By Blown Calls.&nbsp;Former City Manager Pleads Guilty To Child Porn Charges.&nbsp;
